--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -17,3 +17,5 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: ${{ vars.AWS_REGION }}
+      - name: Publish to pub.dev
+        run: dart pub publish
