--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,9 +1,10 @@
 name: very_supply_api_client
-
-version: 0.1.0
+repository: https://github.com/vassilyvv/very-supply-api-client
+description: The library contains all the necessary methods to interact with very.supply API.
+version: 0.0.1
 
 environment:
-  sdk: '>=3.0.0'
+  sdk: '>=3.0.0 <4.0.0'
 
 dependencies:
   dio: ^5.3.2
