--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -17,5 +17,7 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: ${{ vars.AWS_REGION }}
-      - name: publish
-        uses: dart-lang/setup-dart/.github/workflows/publish.yml@v1
+  publish_dart:
+    permissions:
+      id-token: write
+    uses: dart-lang/setup-dart/.github/workflows/publish.yml@v1
