--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: very_supply_api_client
 repository: https://github.com/vassilyvv/very-supply-api-client
 description: The library contains all the necessary methods to interact with very.supply API.
-version: 0.0.8
+version: 0.0.9
 
 environment:
   sdk: '>=3.0.0 <4.0.0'
@@ -9,3 +9,4 @@ environment:
 dependencies:
   dio: ^5.3.2
   js: ^0.6.7
+  collection: ^1.18.0
